# str2bool

./: README.md  pyproject.toml
str2bool/: __init__.py
tests/: test_str2bool.py
